# Domicile

./: .gitignore  .shot.mjs  .shot2.mjs  ANALYSIS_DEEP.md  COMPETITOR_MATRIX.md  LICENSE  README.md  eslint.config.js  mcp_probe.mjs  package-lock.json  package.json  tsconfig.desktop.json  typedoc.json  vite.config.desktop.ts  vite.config.ts
.github/workflows/: docs.yml  pages.yml  release.yml  tauri.yml
desktop/: README.md  desktop.smoke.mjs  index.html  main.ts  package-lock.json  package.json  styles.css  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: API.md  EXPORT_IMPORT.md  HAVEN_2_DESIGN.md  MARKET_ANALYSIS.md  MCP_INTEGRATION.md  MIGRATION.md  PERFORMANCE.md  PRODUCT_DESIGN.md  QUICKSTART.md  RAG_TUTORIAL.md  TECHNICAL_VALIDATION.md  TROUBLESHOOTING.md
showcase/: index.html  playground.html  showcase.smoke.mjs
src/: index.ts  logger.test.ts  logger.ts
src/cli/: cli.test.ts  commands.test.ts  commands.ts  env.ts  index.ts
src/core/: ModelRegistry.test.ts  ModelRegistry.ts  VectorDB.test.ts  VectorDB.ts  capabilities.test.ts  capabilities.ts  contracts.test.ts  contracts.ts  factory.test.ts  factory.ts  hnsw_e2e.test.ts  residency.test.ts  residency.ts  types.ts
src/embedding/: EmbeddingPipeline.test.ts  EmbeddingPipeline.ts  OnnxEmbeddingGenerator.test.ts  OnnxEmbeddingGenerator.ts  TransformersEmbedding.ts  parallelBatch.test.ts  parallelBatch.ts
src/index/: BackedIndex.ts  BruteForceBackedIndex.ts  HnswBackedIndex.ts  HnswIndex.ts  IndexBenchmark.test.ts  IndexBenchmark.ts  TombstoneLog.ts  (+1 more)
(+46 files in other folders)
